cloud-tryout/sample-k8s-project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  labels:
    app: sample-app
spec:
  selector:
    app: sample-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
